fixing content jump when overlay opened

--- a/src/stylesheets/components/_work-overlay.sass
+++ b/src/stylesheets/components/_work-overlay.sass
@@ -66,6 +66,7 @@
       display: flex
       flex: 0 0 100%
       justify-content: space-between
+      padding-top: 1.375rem // ensure content is in the same position with/without overlay
 
     &-column
       &:nth-of-type(2)
